# n3ur0n

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  USE_CASES.md  n3ur0n-architecture-v0.md  n3ur0n-blob-protocol-v0.md  n3ur0n-capability-manifest-v0.md  n3ur0n-direct-chat-v0.md  n3ur0n-planner-brainstorm.md  n3ur0n-planner-enhancements-v1.md  n3ur0n-planner-recommendations-v0.md  project-tech-stack.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  pages.yml  release.yml
crates/adapters/: Cargo.toml
crates/adapters/src/: echo.rs  lib.rs  openai.rs  utility.rs
crates/adapters/tests/: openai_backend.rs
crates/core/: Cargo.toml
crates/core/src/: blob.rs  capability.rs  error.rs  identity.rs  lib.rs  message.rs  protocol.rs  verify.rs
crates/desktop/: .gitignore  Cargo.toml  README.md  tauri.conf.json
crates/desktop/capabilities/: default.json
crates/desktop/icons/: icon.icns
crates/desktop/src/: main.rs
crates/node/: Cargo.toml
crates/node/src/: backends_registry.rs  blob_client.rs  blob_resolve.rs  client.rs  conversation.rs  discovery.rs  error.rs  handler.rs  identity_file.rs  lib.rs  node.rs  registry.rs  runtime.rs
crates/node/src/bindings/: backend.rs  http.rs  mcp.rs  mcp_client.rs  mod.rs  prompt.rs  template.rs
crates/node/src/manifest/: mod.rs  parser.rs  tests.rs  types.rs
crates/node/src/planner/: catalog.rs  compiler.rs  direct.rs  grammar.rs  llm.rs  mod.rs  plan.rs  plan_exec.rs  planner_cap.rs  retrieval.rs  tool_call.rs
crates/node/tests/: handler.rs  planner_eval.rs
crates/node/tests/fixtures/: mock_mcp_server.py  planner_cases.json
crates/server/: Cargo.toml
crates/server/src/: auth.rs  blob_gc.rs  blobs.rs  bootstrap.rs  bootstrap_config.rs  cli.rs  client.rs  files_api.rs  http.rs  lib.rs  main.rs  planner_config.rs  settings.rs
crates/server/tests/: blobs.rs  direct_chat.rs  discovery.rs  http_protocol.rs
crates/server/ui/: app.js  auth.js  i18n.js  icons.js  index.html  style.css
crates/server/ui/locales/: en.json  fr.json
crates/storage/: Cargo.toml
crates/storage/migrations/: 0001_init.sql  0002_conversations.sql  0003_users_sessions.sql  0004_blobs.sql  0005_plan_runs.sql
crates/storage/src/: auth.rs  blobs.rs  conversations.rs  lib.rs  nonces.rs  peers.rs  plan_runs.rs
deploy/hiawatha/: n3ur0n.net.conf
deploy/nginx/: n3ur0n.net.conf
deploy/systemd/: install.sh  n3ur0n-seed.env.example  n3ur0n-seed.service  uninstall.sh
docker/: Dockerfile  cluster-smoke.sh  compose.yml  entrypoint.sh
docs/: _config.yml  index.html  style.css
docs/superpowers/plans/: 2026-06-04-direct-chat-mode.md
docs/superpowers/specs/: 2026-07-15-n3uron-www-design.md  2026-07-17-bootstrap-seeds-ui-design.md
frontend/: package.json  vite.config.ts
frontend/src/: app.d.ts  app.html
frontend/src/lib/: transport.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
scripts/: planner-eval.sh
www/: fonts.css  index.html  styles.css
