[package]
name = "n3ur0n-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "N3UR0N backend adapters: MCP, OpenAI-compatible, generic HTTP, local process."

[dependencies]
n3ur0n-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
