[package]
name = "n3ur0n-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "N3UR0N local storage: SQLite repos for peers, nonces, subscriptions, capabilities, audit log."

[dependencies]
n3ur0n-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
